--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<html>
-  <h1> meu primeiro arquivo no meu primeiro repositorio. </h1>
-</html>
+styler="text -aling:center"
+tag-head
+<stlyer>
+     p{
+        tex-align:center
+    }
+  </styler>
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
+        <title>Xandão</title>
     </head>
     <body>
-        <h1>Sobre a Barbearia Alura</h1>
+        <h1>Sobre o Xandão</h1>
 
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
+        <p> Responsavel por ser o último herói na terra nos fins dos tempos, capaz de aguentar 300 meteoros só com o double biceps, aqui é XAndão!<p>
         <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <p> Almentar a palavra do Xandão para os demais mundos e submundo dos espaço.</p>
     </body>
 </html>
