--- a/index.html
+++ b/index.html
@@ -20,3 +20,8 @@ tag-head
         <p> Almentar a palavra do Xandão para os demais mundos e submundo dos espaço.</p>
     </body>
  </html>
+<p> Essa é uma história sobre a trajetória de Super Xandão, último herói da Terra, campeão da raça humana e caçador de demônios.</p>
+<p> Xandão nasceu de uma vontade divina e tem como objetivo salvar a humanidade.<p>
+     <p> Sempre que alguém está em pânico, Xandão diz: ''SEM PRESSÃO, AQUI É XANDÃO!<p>
+
+
